--- a/hgt.org
+++ b/hgt.org
@@ -1644,9 +1644,8 @@ library(stringr)
 [[file:figs/test_heights.png]]
 
 
-
-
-**** extract lidar clouds within tree buffers 
+*
+*** extract lidar clouds within tree buffers 
 ***** 2017
  #+begin_src R
    library(doParallel)
@@ -1932,7 +1931,35 @@ binning, but you need to resample many times.
 The uncertainty in the bias is also important.  Especially wehn few
 points.  But less important if averaging across many treees.
 
+
+
 #+begin_src R
+  library(ggthemes)
+      terk <- list(theme_solarized_2(base_size = 16) +
+                   theme(legend.title = element_text(size = 10),
+                         legend.text = element_text(size = 8),
+                         axis.ticks = element_line(size = .3),
+                         rect = element_rect(fill = "transparent"),
+                         panel.background = element_rect(fill = "transparent"),
+                         panel.grid.major = element_line(color = "#839496", size = .1),
+                         panel.grid.minor = element_line(color = "#839496", size = .05)))
+
+  base1 <- "#93a1a1"
+  blue <- scale_color_solarized("blue")
+
+  red <- solarized_pal("red")(1)
+
+#+end_src
+
+#+RESULTS:
+
+
+#+begin_src R
+  library(raster)
+  library(dplyr)
+  library(stringr)
+  library(foreach)
+  library(doParallel)
 
   b <- shapefile("/home/erker/hgt_data/madison_tree_inventories/hgt/trees_buf_excludeNearNeigh.shp")
   b@data <- select(b@data, UID)
@@ -1999,6 +2026,7 @@ points.  But less important if averaging across many treees.
 
 
   treelasdir <- "/home/erker/hgt_data/madison_tree_inventories/hgt/"
+  reps <- 1000
 
   cl <- makeCluster(6)
   registerDoParallel(cl)
@@ -2010,104 +2038,76 @@ points.  But less important if averaging across many treees.
       path2009 <- paste0(treelasdir, "trees_2009_las/", uids_df$path2009[i])
       path2005 <- paste0(treelasdir, "trees_2005_las/", uids_df$path2005[i])
 
-      if(file.exists(path2017)) {
-          l2017 <- readLAS(path2017, select = "")
-          n17 <- nrow(l2017@data)
-          max2017 <- max(l2017@data$Z)
-      } else {
-          l2017 <- NA
-          max2017 <- NA
-      }
+      l2017 <- readLAS(path2017, select = "")
+      l2017@data$Z <-     l2017@data$Z  * .3048  # convert to meters
+      n17 <- nrow(l2017@data)
+      emp_max2017 <- max(l2017@data$Z)
 
-      if(file.exists(path2016)) {
-          l2016 <- readLAS(path2016, select = "")
-          n16 <- nrow(l2016@data)
-          max2016 <- max(l2016@data$Z)
-          if (file.exists(path2017)) {
+      l2016 <- readLAS(path2016, select = "")
+      l2016@data$Z <-     l2016@data$Z  * .3048  # convert to meters
+      n16 <- nrow(l2016@data)
+      emp_max2016 <- max(l2016@data$Z)
 
-              if(n16 < n17) {
-                  bias17to16 <- max2017 - mean(replicate(reps, max(sample(l2017@data$Z, n16))))
-              } else if (n16 > n17) {
-                  bias17to16 <- -1 * (max2016 - mean(replicate(reps, max(sample(l2016@data$Z, n17)))))
-              } else if (n16 == n17) {
-                  bias17to16 <- 0
-              }
+      l2009 <- readLAS(path2009, select = "")
+      l2009@data$Z <-     l2009@data$Z  * .3048  # convert to meters
+      n09 <- nrow(l2009@data)
+      emp_max2009 <- max(l2009@data$Z)
 
-      } else {
-              bias17to16 <- NA
-          }
-      } else {
-          l2016 <- NA
-          n16 <- NA
-          max2016 <- NA
-          bias17to16 <- NA
-      }
-
-      if(file.exists(path2009)) {
-          l2009 <- readLAS(path2009, select = "")
-          n09 <- nrow(l2009@data)
-          max2009 <- max(l2009@data$Z)
-          if (file.exists(path2016)) {
-              if(n09 < n16) {
-                  bias16to09 <- max(l2016@data$Z) - mean(replicate(reps, max(sample(l2016@data$Z, n09))))
-              } else if (n09 > n16) {
-                  bias16to09 <- -1 * (max(l2009@data$Z) - mean(replicate(reps, max(sample(l2009@data$Z, n16)))))
-              } else if (n09 == n16) {
-                  bias16to09 <- 0
-              }
-          } else {
-              bias16to09 <- NA
-          }
-      } else {
-          l2009 <- NA
-          n09 <- NA
-          max2009 <- NA
-          bias16to09 <- NA
-      }
-
-      if(file.exists(path2005)) {
-          l2005 <- readLAS(path2005, select = "")
-          n05 <- nrow(l2005@data)
-          max2005 <- max(l2005@data$Z)
-          if (file.exists(path2009)) {
-              if(n05 < n09) {
-                  bias09to05 <- max(l2009@data$Z) - mean(replicate(reps, max(sample(l2009@data$Z, n05))))
-              } else if (n05 > n09) {
-                  bias09to05 <- -1 * (max(l2005@data$Z) - mean(replicate(reps, max(sample(l2005@data$Z, n09)))))
-              } else if (n05 == n09) {
-                  bias09to05 <- 0
-              }
-    
-          } else {
-              bias09to05 <- NA
-          }
-      } else {
-          l2005 <- NA
-          n05 <- NA
-          max2005 <- NA
-          bias09to05 <- NA
-      }
-
-      reps <- 100
+      l2005 <- readLAS(path2005, select = "")
+      l2005@data$Z <-     l2005@data$Z  * .3048  # convert to meters
+      n05 <- nrow(l2005@data)
+      emp_max2005 <- max(l2005@data$Z)
 
 
-      res <- c(uid = uids_df[i,"uid"],
-               max2017 = max2017,
+                                          # here is where I am [2019-11-07 Thu]  I need to think of which clouds to combine for each calculation of bias?  Should I combine all the clouds??  The years that are adjacent?
+    # combine all of them.  this gives a pulse bias.  I may have to do a footprint correction later.
+
+
+      Z <- c(l2017@data$Z, l2016@data$Z, l2009@data$Z, l2005@data$Z)
+      mZ <- max(Z)
+
+      bias_17 <- replicate(reps, mZ - max(sample(Z, n17, replace = T)))
+      bias_16 <- replicate(reps, mZ - max(sample(Z, n16, replace = T)))
+      bias_09 <- replicate(reps, mZ - max(sample(Z, n09, replace = T)))
+      bias_05 <- replicate(reps, mZ - max(sample(Z, n05, replace = T)))
+
+      mean_bias17 <- mean(bias_17)
+      var_bias17 <- var(bias_17)
+
+      mean_bias16 <- mean(bias_16)
+      var_bias16 <- var(bias_16)
+
+      mean_bias09 <- mean(bias_09)
+      var_bias09 <- var(bias_09)
+
+      mean_bias05 <- mean(bias_05)
+      var_bias05 <- var(bias_05)
+
+
+
+      res <- data.frame(uid = uids_df[i,"uid"],
+               emp_max2017 = emp_max2017,
                n2017 = n17,
-               max2016 = max2016,
+               emp_max2016 = emp_max2016,
                n2016 = n16,
-               max2009 = max2009,
+               emp_max2009 = emp_max2009,
                n2009 = n09,
-               max2005 = max2005,
+               emp_max2005 = emp_max2005,
                n2005 = n05,
-               bias17to16 = bias17to16,
-               bias16to09 = bias16to09,
-               bias09to05 = bias09to05)
+               mean_bias17 = mean_bias17,
+               mean_bias16 = mean_bias16,
+               mean_bias09 = mean_bias09,
+               mean_bias05 = mean_bias05,
+               var_bias17 = var_bias17,
+               var_bias16 = var_bias16,
+               var_bias09 = var_bias09, 
+               var_bias05 = var_bias05, 
+               stringsAsFactors = F)
 
       saveRDS(res, paste0("/home/erker/hgt_data/madison_tree_inventories/hgt/extracted_heights_bias/", uids_df[i,"uid"], ".rds"))
       return(res)
-  }
 
+  }
   closeAllConnections()
 
 
@@ -2116,17 +2116,11 @@ points.  But less important if averaging across many treees.
 or read in the data from the saved
 
 #+begin_src R
-    h <- data.frame(out, stringsAsFactors = F) 
+
+  saveRDS(out, "/home/erker/hgt_data/madison_tree_inventories/hgt/extracted_heights_bias.rds")
 
 
-  hn <-h %>%
-      select(-uid) %>%
-      mutate_if(is.character, as.numeric)
-
-  hn$uid <- h$uid
-
-
-saveRDS(hn, "/home/erker/hgt_data/madison_tree_inventories/hgt/extracted_heights_bias.rds")
+  h <- out
 
 #+end_src
 
@@ -2134,25 +2128,32 @@ saveRDS(hn, "/home/erker/hgt_data/madison_tree_inventories/hgt/extracted_heights
 
 which trees have many points
 #+begin_src R 
-head(arrange(hn, desc(n2017)))
+head(arrange(h, desc(n2017)))
 #+end_src
 
 #+RESULTS:
 #+begin_example
-  max2017 n2017 max2016 n2016 max2009 n2009 max2005 n2005 bias17to16 bias16to09
-1  45.240   421   42.23    24   35.94    19   28.57     2    1.01398     0.1055
-2  59.813   410   57.79    23   55.07    23   55.36     4    2.27493     0.0000
-3  49.427   393   48.67    31   40.24    21   40.40     2    0.46406     0.3845
-4  57.866   392   56.91    68   55.57    46   53.42     3    0.45573     0.2044
-5  48.808   390   48.50    55   43.23    12   36.85     3    0.32271     1.0933
-6  40.823   387   40.32    15   28.00    11   21.32     2    1.01305     1.0801
-  bias09to05     uid
-1     8.6867 ST16124
-2     1.7297 ST31236
-3     3.1191 ST12970
-4     2.0546 ST27840
-5     1.0339 ST82950
-6     2.9347 ST04014
+      uid emp_max2017 n2017 emp_max2016 n2016 emp_max2009 n2009 emp_max2005
+1 ST16124    13.78915   421    12.87170    24    10.95451    19    8.708136
+2 ST31236    18.23100   410    17.61439    23    16.78534    23   16.873728
+3 ST12970    15.06535   393    14.83462    31    12.26515    21   12.313920
+4 ST27840    17.63756   392    17.34617    68    16.93774    46   16.282416
+5 ST82950    14.87668   390    14.78280    55    13.17650    12   11.231880
+6 ST04014    12.44285   387    12.28954    15     8.53440    11    6.498336
+  n2005 mean_bias17 mean_bias16 mean_bias09 mean_bias05   var_bias17
+1     2  0.03123286   0.3240487   0.3859301   1.6123274 0.0015629385
+2     4  0.06292474   0.7194618   0.6904741   1.7945636 0.0063961600
+3     2  0.02155850   0.2055775   0.2801795   1.2459188 0.0006976045
+4     3  0.02727716   0.1442533   0.1883932   0.9540429 0.0019947705
+5     3  0.01361968   0.1140659   0.3488460   1.1123639 0.0006723725
+6     2  0.04831415   0.3124136   0.3817020   1.1251857 0.0037936329
+   var_bias16 var_bias09 var_bias05
+1 0.038510741 0.05351206  1.8005808
+2 0.225532995 0.21412749  1.2677683
+3 0.033280425 0.05185359  1.6372845
+4 0.010350752 0.01487389  0.6407851
+5 0.007342887 0.08198063  0.7616459
+6 0.038738684 0.05972368  0.5394748
 #+end_example
 
 #+begin_src R
@@ -2171,44 +2172,14 @@ head(arrange(hn, desc(n2017)))
 #+RESULTS:
 
 
-#+begin_src R
-
-
-  hn <-h %>%
-      select(-uid) %>%
-      mutate_if(is.character, as.numeric)
-
-  hn$uid <- h$uid
-
-
-  hc <- hn %>%
-    mutate(max2005corr = ifelse(bias09to05 > 0, max2005 + bias09to05, 
-
-#max2017 = ifelse(bias17to16 > 0, max2017, max2017 - bias17to16),
- #          max2016 = 
-
-#+end_src
-
-#+RESULTS:
-
-
-#+begin_src R
-    hn3 <- hn %>% filter(n2005 > 2, 
-                         n2009 > 3,
-                         abs(bias17to16) < 2,
-                         abs(bias16to09) < 2,
-                         abs(bias09to05) < 2)
-#+end_src
-
-#+RESULTS:
-
 
 #+begin_src R :exports results :results graphics :file figs/heights_lidar_extract.png :width 700 :height 500
+library(ggplot2)
+    library(tidyr)
   n <- 10
 
-    library(tidyr)
-      d <- hn3 %>%
-          select(max2017, max2016, max2009, max2005, uid) %>%
+      d <- h %>%
+          select(emp_max2017, emp_max2016, emp_max2009, emp_max2005, uid) %>%
         sample_n(n) %>%
         gather(year, height, -uid) %>%
         mutate(year = as.numeric(str_extract(year, "[0-9]{4}")))
@@ -2220,14 +2191,245 @@ head(arrange(hn, desc(n2017)))
 [[file:figs/heights_lidar_extract.png]]
 
 
- #+begin_src R
-  library(lme4)
+correct heights and add bias uncertainty
+#+begin_src R
 
-  m <- lmer(height ~ year + (1 | uid), data = d)
+        hc <- h %>%
+          mutate(cor_max2017 = emp_max2017 + mean_bias17,
+                 cor_max2016 = emp_max2016 + mean_bias16,
+                 cor_max2009 = emp_max2009 + mean_bias09,
+                 cor_max2005 = emp_max2005 + mean_bias05,
+                 sd17 = sqrt(var_bias17),
+                 sd16 = sqrt(var_bias16),
+                 sd09 = sqrt(var_bias09),
+                 sd05 = sqrt(var_bias05))
+
+    h_corheight <-   hc %>% select(uid, cor_max2017, cor_max2016, cor_max2009, cor_max2005) %>%
+        gather(year, cor_height, -uid) %>%
+        mutate(year = as.numeric(str_extract(year, "[0-9]{4}")))
+
+    h_empheight <-   hc %>% select(uid, emp_max2017, emp_max2016, emp_max2009, emp_max2005) %>%
+        gather(year, emp_height, -uid) %>%
+        mutate(year = as.numeric(str_extract(year, "[0-9]{4}")))
+
+    h_sdbias <-   hc %>% select(uid, sd17, sd16, sd09, sd05) %>%
+        gather(year, sdbias, -uid) %>%
+        mutate(year = as.numeric(paste0("20",str_extract(year, "[0-9]{2}"))))
+
+
+  hc <- left_join(h_corheight, h_sdbias)
+
+  hc <- left_join(hc, h_empheight)
 
 #+end_src
 
 #+RESULTS:
+: 
+: Joining, by = c("uid", "year")
+: 
+: Joining, by = c("uid", "year")
+
+On average, I'd say that this correction looks pretty good!
+#+begin_src R :exports results :results graphics :file figs/correction.png :width 1300 :height 800 :bg transparent :res 100
+
+  n <- 40
+  set.seed(2)
+  uids <- sample(unique(hc$uid), n)
+  hcf <- filter(hc, uid %in% uids)
+
+    ggplot(data = hcf) + 
+        geom_line(aes(y = emp_height, x = year, group = uid), color = base1) +
+        geom_line(aes(y = cor_height, x = year, group = uid), color = red) +
+        geom_linerange(aes(ymax = cor_height + 1.96 * sdbias, ymin = cor_height - 1.96 *sdbias, x = year), color = red) + 
+        facet_wrap(~uid, ncol = 8) +
+        terk +
+        scale_x_continuous(breaks = c(2005,2009, 2017)) +
+        theme(axis.text.x = element_text(angle = 60, hjust = 1))
+
+
+#+end_src
+
+#+RESULTS:
+[[file:figs/correction.png]]
+
+
+#+begin_src R :exports results :results graphics :file figs/correction_st16209.png :width 300 :height 200 :bg transparent :res 100
+  hcf <- filter(hc, uid == "ST16209")
+
+    ggplot(data = hcf) + 
+        geom_line(aes(y = emp_height, x = year, group = uid), color = base1) +
+        geom_line(aes(y = cor_height, x = year, group = uid), color = red) +
+        geom_linerange(aes(ymax = cor_height + 1.96 * sdbias, ymin = cor_height - 1.96 *sdbias, x = year), color = red) + 
+#        facet_wrap(~uid, ncol = 1) +
+        terk +
+        scale_x_continuous(breaks = c(2005, 2009, 2017)) 
+
+
+
+#+end_src
+
+#+RESULTS:
+[[file:figs/correction_st16209.png]]
+
+
+center hc
+#+begin_src R
+hc$year <- hc$year - 2005
+#+end_src
+
+#+RESULTS:
+
+Good example of why weights are needed
+#+begin_src R
+dt <- filter(hc, uid == "ST16209")
+mw <- lm(cor_height ~ year, weights = 1/ sdbias^2, data = dt)
+mnw <- lm(cor_height ~ year, data = dt)
+summary(mw)
+summary(mnw)
+#+end_src
+
+#+RESULTS:
+#+begin_example
+
+Call:
+lm(formula = cor_height ~ year, data = dt, weights = 1/sdbias^2)
+
+Weighted Residuals:
+      1       2       3       4 
+ 0.4127 -0.4735 -0.1106  0.6957 
+
+Coefficients:
+            Estimate Std. Error t value Pr(>|t|)   
+(Intercept) 15.82650    0.54919  28.818   0.0012 **
+year         0.17992    0.05737   3.136   0.0884 . 
+---
+codes:  0 ‘***’ 0.001 ‘**’ 0.01 ‘*’ 0.05 ‘.’ 0.1 ‘ ’ 1
+
+Residual standard error: 0.6674 on 2 degrees of freedom
+Multiple R-squared:  0.831,	Adjusted R-squared:  0.7465 
+F-statistic: 9.834 on 1 and 2 DF,  p-value: 0.08841
+
+Call:
+lm(formula = cor_height ~ year, data = dt)
+
+Residuals:
+      1       2       3       4 
+ 0.5076 -0.1620 -1.0773  0.7317 
+
+Coefficients:
+            Estimate Std. Error t value Pr(>|t|)   
+(Intercept) 17.49770    0.83920  20.851  0.00229 **
+year         0.01652    0.10012   0.165  0.88412   
+---
+codes:  0 ‘***’ 0.001 ‘**’ 0.01 ‘*’ 0.05 ‘.’ 0.1 ‘ ’ 1
+
+Residual standard error: 0.995 on 2 degrees of freedom
+Multiple R-squared:  0.01343,	Adjusted R-squared:  -0.4799 
+F-statistic: 0.02722 on 1 and 2 DF,  p-value: 0.8841
+#+end_example
+
+
+
+Coeffiecient estimates are better than if a point were dropped, and
+better than if you assume all points contain equal information.
+
+
+
+Fitting many weighted regressions and getting estimates
+#+begin_src R
+
+        lms <- list()
+        uids <- unique(hc$uid)
+      for(i in 1:length(uids)) {
+            lms[[i]] <- lm(cor_height ~ year, data = subset(hc, uid == uids[i]))
+        }
+  names(lms) <- uids
+    saveRDS(lms, "/home/erker/hgt_data/madison_tree_inventories/hgt/growth_rates_lms.rds")
+#+end_src
+
+#+RESULTS:
+
+#+begin_src R
+      growth.rates <- sapply(lms, function(lm) coef(lm)[2])
+      growth.rates.se <- sapply(lms, function(lm) summary(lm)$coefficients[2,2])
+      est.hgt.at2005 <- sapply(lms, function(lm) coef(lm)[1])
+      growth.rates <- data.frame(uid = names(lms), 
+                                 growth.rate = growth.rates, 
+                                 growth.rate.se = growth.rates.se, 
+                                 est.hgt.at2005 = est.hgt.at2005, stringsAsFactors = F)
+#+end_src
+
+#+RESULTS:
+
+#+begin_src R :exports results :results graphics :file figs/growthrates_lm.png :width 1000 :res 120 :bg transparent
+  ggplot(growth.rates, aes(x = growth.rate)) + geom_histogram(binwidth = .03, color = base1) +
+    terk +
+    scale_x_continuous("growth rate (ft/year)")
+#+end_src
+
+#+RESULTS:
+[[file:figs/growthrates_lm.png]]
+
+#+begin_src R :exports results :results graphics :file figs/growthrates_lm_clip.png :width 1000 :res 120 :bg transparent
+  ggplot(growth.rates, aes(x = 100 * growth.rate)) + geom_histogram(binwidth = 2, color = base1) +
+    terk +
+    scale_x_continuous("growth rate (cm/year)", lim = c(-100,100), breaks = c(-100,-50,0, round(mean(growth.rates$growth.rate * 100),1), 50, 100)) +
+    geom_vline(data = growth.rates, aes(xintercept = mean(growth.rate)*100), color = red)
+#+end_src
+
+#+RESULTS:
+[[file:figs/growthrates_lm_clip.png]]
+
+#+begin_src R :exports results :results graphics :file figs/rate_by_int.png :bg transparent :width 1000 :res 100
+hn <- left_join(h, growth.rates)
+
+  ggplot(hn, aes(x = emp_max2005, y = growth.rate)) + geom_point(color = base1, size = .5, alpha = .5) + terk +
+    geom_smooth()
+#+end_src
+
+#+RESULTS:
+[[file:figs/rate_by_int.png]]
+
+
+#+begin_src R
+saveRDS(hn, "/home/erker/hgt_data/madison_tree_inventories/hgt/lidarextractedheights_growthrates.rds")
+#+end_src
+
+#+RESULTS:
+
+join growth rates to trees
+
+#+begin_src R
+library(raster)
+trees <- shapefile("/home/erker/hgt_data/madison_tree_inventories/MadisonTrees_WithAttributes.shp")
+
+
+
+#+end_src
+
+
+
+
+
+
+
+
+
+
+???
+
+#+begin_src R
+library(lme4)
+
+m1 <- lmer(cor_height ~ year + (1 | uid), data = hc, weights = 1/ sdbias^2)
+#+end_src
+
+#+RESULTS:
+
+
+
+
+
 
 **** crop lidar to the tenney oak for visualization of bias situation.
 
